# H6-CedarC

./: .gitignore  Makefile.am  Makefile.am.release  Makefile.inc  README.md  config.mk  configure.ac  configure.ac.release
base/: Android.mk  CdcIonUtil.c  CdcMessageQueue.c  CdcSysinfo.c  Makefile.am
base/include/: CdcMessageQueue.h  CdcSysinfo.h  CdcUtil.h  cdc_version.h  log.h
base/include/gralloc_metadata/: sunxi_metadata_def.h
config/: config_common.mk
include/: cdc_config.h  memoryAdapter.h  sc_interface.h  sdecoder.h  typedef.h  vdecoder.h  veAdapter.h  veInterface.h  vencoder.h
memory/: Android.mk  Makefile.am  Makefile.am.release  memoryAdapter.c
memory/ionMemory/: ionAlloc.c  ionAllocEntry.h  ionAllocList.h
vdecoder/: Android.mk  Makefile.am  Makefile.am.release  fbm.c  pixel_format.c  vdecoder.c  videoengine.h
vdecoder/include/: DecoderList.h  DecoderListFunc.h  DecoderTypes.h  fbm.h  sbm.h  sbmInterface.h  sunxi_tr.h  vdecoder_config.h
vdecoder/sbm/: sbmFrameBase.c  sbmFrameH264.c  sbmFrameH265.c  sbmStream.c
vdecoder/videoengine/: Android.mk  Makefile.am  videoengine.c
vdecoder/videoengine/h264/: Android.mk  Makefile.am  h264.c  h264.h  h264_config.h  h264_dec.c  h264_dec.h  h264_func.h  h264_hal.c  h264_hal.h  h264_mmco.c  h264_mvc.c  h264_nalu.c  stylecheck.sh
vdecoder/videoengine/h265/: Android.mk  Makefile.am  h265.c  h265_common.h  h265_config.h  h265_debug.c  h265_drv.c  h265_drv.h  h265_func.h  h265_md5.c  h265_memory.c  h265_memory.h  h265_parser.c  h265_parser.h  h265_ref.c  h265_register.c  h265_register.h  h265_sha.c  h265_sha.h  h265_var.h
ve/: Android.mk  Makefile.am  veAdapter.c
ve/include/: veAwTopRegDef.h
ve/ut/: Android.mk  ut_ve.c
ve/veAw/: veAw.c  veAw.h  veAwEntry.h
ve/veVp9/: veVp9.c  veVp9.h  veVp9Entry.h
